<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/list_ti"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="20sp"
    android:layout_marginTop="10sp"
    android:layout_marginBottom="10sp"
    android:layout_marginEnd="20sp"
    android:background="@color/colorWhite">

    <TextView
        android:id="@+id/tiker"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="36sp"
        android:layout_toStartOf="@id/icon"
        android:text="@string/string_tiker"
        android:textColor="@color/colorWhite"
        android:textSize="4mm"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icon"
        tools:ignore="InOrMmUsage" />

    <TextView
        android:id="@+id/fullName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15sp"
        android:layout_marginBottom="8sp"
        android:text="@string/string_name_inc"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toBottomOf="@+id/icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/icon" />

    <ImageView
        android:id="@+id/icon"
        android:layout_width="60sp"
        android:layout_height="60sp"
        android:layout_marginStart="10sp"
        android:background="@color/colorWhite"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints" />

</androidx.constraintlayout.widget.ConstraintLayout>