<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:weightSum="9"
    android:layout_height="match_parent"
    android:background="@drawable/background_bg"
    tools:context=".GraphFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_graf"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/ToolBar">
        <TextView
            android:id="@+id/name_inc_graf"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="17dp"
            android:gravity="center"
            android:text="Name Inc"
            android:textStyle="bold"
            android:textColor="@color/colorWhite"
            android:textSize="16dp" />
    </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="525dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card_view_graph"
            android:backgroundTint="#1c1c1c"
            android:layout_width="300dp"
            android:layout_height="500dp"
            android:layout_gravity="center"
            card_view:cardCornerRadius="50dp"
            card_view:cardElevation="15dp" >

            <com.github.mikephil.charting.charts.CandleStickChart
                android:background="#1c1c1c"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginBottom="30dp"
                android:id="@+id/graph" />
        </androidx.cardview.widget.CardView>
        <TextView
            android:id="@+id/tv_dmy"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="DAY"
            android:textColor="@android:color/white"
            android:gravity="center"
            android:textStyle="bold"
            android:textSize="18sp"/>
    </LinearLayout>

    <LinearLayout
        android:layout_gravity="center"
        android:layout_width="320dp"
        android:layout_height="60dp"

        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_day"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/round_corners"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="15dp"
            android:text="@string/tx_day"
            android:elevation="15dp"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btn_month"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/round_corners"
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/tx_month"
            android:elevation="15dp"
            android:textSize="14sp" />
        <Button
            android:id="@+id/btn_year"
            android:layout_width="90dp"
            android:layout_height="45dp"
            android:background="@drawable/round_corners"
            android:gravity="center"
            android:layout_gravity="center"
            android:layout_marginStart="10dp"
            android:text="@string/tx_year"
            android:elevation="15dp"
            android:textSize="14sp" />
    </LinearLayout>

</LinearLayout>